tests/NormalTests/paczka1/fuzzy1/14455845.err
Error in line 1: S912 S912 97,5
Error in line 18: h8yhNx S133 86,78
Error in line 15: PO9LW S912 16,2
